--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -7,7 +7,7 @@ Home
 {%block content%}
 <div class="starter-template ">
   <h1>Simple task tracker</h1>
-  <p class="lead">This application anable you to create your task and assign a tags to it.<br> Also this application
+  <p class="lead">This application enable you to create your task and assign a tags to it.<br> Also this application
     still inprograss in order to improve.</p>
   <form class="form d-flex flex-column align-items-center" action="/" method="POST">
     <div class="form-inline mb-2">
