--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -25,7 +25,6 @@ Home
         <option value="Inprogress">Inprogress</option>
         <option value="Pendding">Pendding</option>
         <option value="Issue">Issue</option>
-        <option value="Complete">Complete</option>
       </select>
     </div>
     <div class="form-group w-50 ">
@@ -53,121 +52,230 @@ Home
             <th>Action</th>
           </tr>
           {% for task in user.tasks%}
-            <tr class="text-center">
-              <td>{{loop.index}} </td>
-              <td>{{task.task_name}}</td>
-              <td>
-                <!-- the username of the creator -->
-                {{task.created_by}}
-              </td>
-              <td>{{task.date_created.date()}}</td>
-              <td class="datarow">
-                <!-- <div class="card-body mw-10">
-                  <a href="#!">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-3.webp" alt="avatar"
-                      class="img-fluid rounded-circle me-1" width="35">
-                  </a>
-                  <a href="#!">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-4.webp" alt="avatar"
-                      class="img-fluid rounded-circle me-1" width="35">
-                  </a>
-                  <button type="button" class="btn btn-outline-dark btn-sm btn-floating">
-                    <i class="fa fa-plus"></i>
-                  </button>
-                </div> -->
-                {{task.description }} 
-              </td>
-              <td>
-                <h5> <span class="{{'badge  p-2 '+task.priority }}">{{task.priority}}</span></h5>
-              </td>
-              <td>
-                <div class="{{'tx '+ task.status}}">
-                  {{task.status}}
-                </div>
-              </td>
-              <td class="actions">
-                <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="{{'#staticBackdrop'+task.id|string}}">
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                </a>
-                <div class="modal fade" id="{{'staticBackdrop'+task.id|string}}" data-bs-backdrop="static" data-bs-keyboard="false"
-                  tabindex="-1" aria-labelledby="{{'staticBackdropLabel'+task.id|string}}" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="{{'staticBackdropLabel'+task.id|string}}">Delete</h5>
-                      </div>
-                      <div class="modal-body">
-                        Are you sure you want to delete this Task <strong> {{task.id}}</strong> ?
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <a href="/delete/{{task.id}}" class="btn btn-danger">
-                          <i class="fa fa-trash-o" aria-hidden="true"></i>
-                        </a>
-                      </div>
+          {% if task.status != "Complete"%}
+          <tr class="text-center">
+            <td>{{loop.index}} </td>
+            <td>{{task.task_name}}</td>
+            <td>
+              <!-- the username of the creator -->
+              {{task.created_by}}
+            </td>
+            <td>{{task.date_created}}
+              <p id="{{'duration'+task.id|string}}"></p>
+            </td>
+            <td class="datarow">
+              {{task.description }}
+            </td>
+            <td>
+              <h5> <span class="{{'badge  p-2 '+task.priority }}">{{task.priority}}</span></h5>
+            </td>
+            <td>
+              <div class="{{'tx '+ task.status}}">
+                {{task.status}}
+              </div>
+            </td>
+            <td class="actions">
+              <a href="#" class="btn btn-danger" data-bs-toggle="modal"
+                data-bs-target="{{'#staticBackdrop'+task.id|string}}">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </a>
+              <div class="modal fade" id="{{'staticBackdrop'+task.id|string}}" data-bs-backdrop="static"
+                data-bs-keyboard="false" tabindex="-1" aria-labelledby="{{'staticBackdropLabel'+task.id|string}}"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="{{'staticBackdropLabel'+task.id|string}}">Delete</h5>
+                    </div>
+                    <div class="modal-body">
+                      Are you sure you want to delete this Task <strong> {{task.id}}</strong> ?
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <a href="/delete/{{task.id}}" class="btn btn-danger">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                      </a>
                     </div>
                   </div>
                 </div>
+              </div>
 
 
-                <!-- update button goes herer -->
-                <!-- Button trigger modal -->
-                <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="{{'#staticBackdrop'+task.id|string +'update'}}"><i
-                    class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                </a>
-                <!-- Modal -->
-                <div class="modal fade" id="{{'staticBackdrop'+task.id|string +'update'}}" data-bs-backdrop="static" data-bs-keyboard="false"
-                  tabindex="-1" aria-labelledby="{{'staticBackdropLabel'+task.id|string +'update'}}" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="{{'staticBackdropLabel'+task.id|string +'update'}}">Update</h5>
-                      </div>
-                      <div class="modal-body">
-                        <form action="/update/{{task.id}}" method="POST">
-                          <!-- Name input -->
-                          <div class="form-outline mb-4">
-                            <input type="text" id="{{'form4Example'+task.id|string}}" name="task-name" class="form-control"
-                              value="{{task.task_name}}" />
-                          </div>
-                          <!-- Email input -->
-                          <div class="form-outline mb-4">
-                            <select class="form-select btn btn-outline-primary m-2" name="priority">
-                              <option selected>Priority</option>
-                              <option value="High">High</option>
-                              <option value="Medium">Medium</option>
-                              <option value="Low">Low</option>
-                            </select>
-                            <select class="form-select btn btn-outline-primary m-2" name="status">
-                              <option selected>Status</option>
-                              <option value="Inprogress">Inprogress</option>
-                              <option value="Pendding">Pendding</option>
-                              <option value="Issue">Issue</option>
-                              <option value="Complete">Complete</option>
-                            </select>
-                          </div>
-                          <!-- Message input -->
-                          <div class="form-outline mb-4">
-                            <textarea class="form-control" name="description" id="{{'form4Example'+task.id|string}}"
-                              rows="4">{{task.description}}</textarea>
-                          </div>
-                          <!-- Submit button -->
-                          <button type="submit" class="btn btn-primary btn-block mb-4">Update</button>
-                        </form>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        </a>
-                      </div>
+              <!-- update button goes herer -->
+              <!-- Button trigger modal -->
+              <a href="#" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="{{'#staticBackdrop'+task.id|string +'update'}}"><i class="fa fa-pencil-square-o"
+                  aria-hidden="true"></i>
+              </a>
+              <!-- Modal -->
+              <div class="modal fade" id="{{'staticBackdrop'+task.id|string +'update'}}" data-bs-backdrop="static"
+                data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="{{'staticBackdropLabel'+task.id|string +'update'}}" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="{{'staticBackdropLabel'+task.id|string +'update'}}">Update</h5>
+                    </div>
+                    <div class="modal-body">
+                      <form action="/update/{{task.id}}" method="POST">
+                        <!-- Name input -->
+                        <div class="form-outline mb-4">
+                          <input type="text" id="{{'form4Example'+task.id|string}}" name="task-name"
+                            class="form-control" value="{{task.task_name}}" />
+                        </div>
+                        <!-- update input -->
+                        <div class="form-outline mb-4">
+                          <select class="form-select btn btn-outline-primary m-2" name="priority">
+                            <option selected>{{task.priority}}/option>
+                            <option value="High">High</option>
+                            <option value="Medium">Medium</option>
+                            <option value="Low">Low</option>
+                          </select>
+                          <select class="form-select btn btn-outline-primary m-2" name="status">
+                            <option selected>{{task.status}}</option>
+                            <option value="Inprogress">Inprogress</option>
+                            <option value="Pendding">Pendding</option>
+                            <option value="Issue">Issue</option>
+                          </select>
+                        </div>
+                        <!-- Message input -->
+                        <div class="form-outline mb-4">
+                          <textarea class="form-control" name="description" id="{{'form4Example'+task.id|string}}"
+                            rows="4">{{task.description}}</textarea>
+                        </div>
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-4">Update</button>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      </a>
                     </div>
                   </div>
                 </div>
-              </td>
-            </tr>
+              </div>
+              <form action="/complete/{{task.id}}" method="POST">
+                <button class="btn btn-success" type="submit" name="done" value="Complete">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                </button>
+              </form>
+            </td>
+          </tr>
+          {%endif%}
           {%endfor%}
         </table>
       </div>
     </div>
   </div>
-</div>
-{%endblock%}
+  <div class="row d-block">
+    <div class="col">
+      <div class="title">
+        <h2>Completed Task</h2>
+      </div>
+    </div>
+    <!-- completed task table  -->
+    <div class="col tasks-form">
+
+      <div class="content"><br>
+        <table class="table">
+          <tr class="text-center">
+            <th>#</th>
+            <th>Task</th>
+            <th>Created By</th>
+            <th>Added date</th>
+            <th>Description</th>
+            <th>Priority</th>
+            <th>Marked</th>
+          </tr>
+          {% for task in user.tasks%}
+          {% if task.status == "Complete"%}
+          <tr class="text-center">
+            <td>{{loop.index}} </td>
+            <td>{{task.task_name}}</td>
+            <td>
+              <!-- the username of the creator -->
+              {{task.created_by}}
+            </td>
+            <td>{{task.date_created.date()}}
+              <p id="{{'duration'+task.id|string}}"></p>
+            </td>
+            <td class="datarow">
+              {{task.description }}
+            </td>
+            <td>
+              <h5> <span class="{{'badge  p-2 '+task.priority|string }}">{{task.priority}}</span></h5>
+            </td>
+            <td>
+              <div class="{{'tx '+ task.status}}">
+                {{task.status}}
+              </div>
+            </td>
+            <td class="actions">
+              <a href="#" class="btn btn-danger" data-bs-toggle="modal"
+                data-bs-target="{{'#staticBackdrop'+task.id|string}}">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </a>
+              <div class="modal fade" id="{{'staticBackdrop'+task.id|string}}" data-bs-backdrop="static"
+                data-bs-keyboard="false" tabindex="-1" aria-labelledby="{{'staticBackdropLabel'+task.id|string}}"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="{{'staticBackdropLabel'+task.id|string}}">Delete</h5>
+                    </div>
+                    <div class="modal-body">
+                      Are you sure you want to delete this Task <strong> {{task.id}}</strong> ?
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <a href="/delete/{{task.id}}" class="btn btn-danger">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </td>
+          </tr>
+          {%endif%}
+          {%endfor%}
+        </table>
+      </div>
+      <!-- end completed task table -->
+    </div>
+  </div>
+  <script>
+    setInterval(
+      history
+      , 10000
+    )
+    function history() {
+      var now = Date.now()
+      var taskTime = [];
+      '{%for task in user.tasks %}'
+      var y = taskTime.push({
+        id: '{{task.id}}',
+        time: '{{task.date_created.timestamp()}}'
+      })
+      '{%endfor%}'
+      for ([key, val] of Object.entries(taskTime)) {
+        var res = now - Math.floor(parseInt(val.time) * 1000);
+        var id = document.getElementById("duration" + val.id)
+        if (Math.floor(res / 1000) <= 60)
+          id.innerHTML = Math.floor(res / 1000) + " seconds ago";
+        else if (Math.floor(res / 1000 / 60) <= 60)
+          id.innerHTML = Math.floor(res / 1000 / 60) + " minute ago";
+        else if (Math.floor(res / 1000 / 60 / 60) <= 24)
+          id.innerHTML = Math.floor(res / 1000 / 60 / 60) + " hours ago";
+        else if (Math.floor(res / 1000 / 60 / 60 / 24) <= 7)
+          id.innerHTML = Math.floor(res / 1000 / 60 / 60 / 24) + " day ago";
+        else if (Math.floor(res / 1000 / 60 / 60 / 24 / 7) <= 4)
+          id.innerHTML = Math.floor(res / 1000 / 60 / 60 / 24 / 7) + " week ago";
+        else if (Math.floor(res / 1000 / 60 / 60 / 24 / 7 / 4) <= 12)
+          id.innerHTML = Math.floor(res / 1000 / 60 / 60 / 24 / 7 / 4) + " month ago";
+        else
+          id.innerHTML = Math.floor(res / 1000 / 60 / 60 / 24 / 7 / 4) + " year ago";
+      }
+    }
+  </script>
+  {%endblock%}
