--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -60,7 +60,8 @@ Home
               <!-- the username of the creator -->
               {{task.created_by}}
             </td>
-            <td>{{task.date_created}}
+            <td>
+              <!-- {{task.date_created}} -->
               <p id="{{'duration'+task.id|string}}"></p>
             </td>
             <td class="datarow">
