--- a/tracker/templates/login.html
+++ b/tracker/templates/login.html
@@ -44,7 +44,7 @@ Login
             <!-- Password input -->
             <div class="form-outline mb-4">
               <input type="password" name="1st-password" id="form2Example2" class="form-control"
-                placeholder="Your password" />
+                placeholder="Your password" required />
             </div>
 
             <!-- 2 column grid layout for inline styling -->
